objects/ASI_CRM_Season__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Headquarter</fullName>
                    <label>HQ</label>
                </value>
                <value>
                    <fullName>South Region</fullName>
                    <label>South</label>
                </value>
                <value>
                    <fullName>South West Region</fullName>
                    <label>Southwest</label>
                </value>
                <value>
                    <fullName>North Region</fullName>
                    <label>North</label>
                </value>
                <value>
                    <fullName>North West Region</fullName>
                    <label>Northwest</label>
                </value>
                <value>
                    <fullName>Central Region</fullName>
                    <label>Central</label>
                </value>
                <value>
                    <fullName>East Region</fullName>
                    <label>East</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Season</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Start_Date__c</columns>
        <columns>ASI_CRM_End_Date__c</columns>
        <columns>ASI_CRM_Region__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Season Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Seasons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>